# lecture-raytracing2022

./: CMakeLists.txt  README.md
ref/: camera.h  image.h  main.cpp  vec3.h
src/: camera.h  image.h  intersectioninfo.h  main.cpp  material.h  ray.h  raytracing.h  scene.h  sphere.h  vec3.h
